RESOLVED FIXED 283377
[TZone] Missing WTF_MAKE_TZONE_ALLOCATED_IMPL annotation for class WKLinearMediaKitCaptionsLayer
https://bugs.webkit.org/show_bug.cgi?id=283377
Summary [TZone] Missing WTF_MAKE_TZONE_ALLOCATED_IMPL annotation for class WKLinearMe...
Michael Saboff
Reported 2024-11-19 13:20:53 PST
WKLinearMediaKitCaptionsLayer.h has a WTF_MAKE_TZONE_ALLOCATED annotation for WKLinearMediaKitCaptionsLayer, but WKLinearMediaKitCaptionsLayer.mm doesn't have the corresponding WTF_MAKE_TZONE_ALLOCATED_IMPL annotation.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-11-19 13:21:37 PST
Michael Saboff
Comment 2 2024-11-19 13:27:14 PST
EWS
Comment 3 2024-11-19 19:42:16 PST
Committed 286835@main (6641fa8735bb): <https://commits.webkit.org/286835@main> Reviewed commits have been landed. Closing PR #36862 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.