[TZone] Missing WTF_MAKE_TZONE_ALLOCATED_IMPL annotation for class WKLinearMediaKitCaptionsLayer https://bugs.webkit.org/show_bug.cgi?id=283377 rdar://140226307

Reviewed by Yusuke Suzuki.

Added the missing WTF_MAKE_TZONE_ALLOCATED_IMPL annotation for WKLinearMediaKitCaptionsLayer.

* Source/WebKit/Platform/ios/VideoPresentationInterfaceLMK.mm:

Canonical link: https://commits.webkit.org/286835@main